Fix z-index button

--- a/css/style.css
+++ b/css/style.css
@@ -112,7 +112,9 @@ footer > section > div > div > div:last-child > a > img{
 .vh-100{
     height: 100vh;
 }
-
+main > section:last-child{
+    height: 0vh;
+}
 main > section:last-child > div:nth-child(1){
         display: flex;
         flex-direction: column;
@@ -121,7 +123,11 @@ main > section:last-child > div:nth-child(1){
         position: fixed;
         top: 0;
         height: 100vh;
-    }
+}
+
+main > section:nth-child(1) > div > button{
+    z-index: inherit;
+}
 
 @media (min-width: 576px){
     *{
